# bitrix-forum-reader

./: .gitmodules  CMakeLists.txt  Info-ios.plist  Info.plist  LICENSE  MainForm.ui.qml  README.md  bitrix-forum-reader.pro  bitrix-forum-reader.qbs  deployment_info  main.cpp  main.qml  qml.qrc  rubankireader.pro  rubankireader.qbs
android/: AndroidManifest.xml
android/res/values/: libs.xml
cmake/: NSIS.template.in  bintray_deploy.json.in
common/: CMakeLists.txt  filedownloader.cpp  filedownloader.h  logger.h  resultcode.h
gumbo-parser/: CMakeLists.txt  gumbo-parser.pro  gumbo-parser.qbs
gumbo-parser/debug/: gumbo-parser.lib
gumbo-parser/src/: parser.c  string_buffer.c  util.c
libs/curl/macos/lib/: libcurl.4.dylib
libs/curl/macos/lib/pkgconfig/: libcurl.pc
libs/curl/win32/VC14/x32/debug/: libcurld.lib
libs/curl/win32/VC14/x64/debug/: libcurld.lib
libs/gumbo-parser/win32/VC14/x32/Debug/: gumbo-parser.lib
libs/gumbo-parser/win32/VC14/x32/Release/: gumbo-parser.lib
libs/gumbo-parser/win32/VC14/x64/Debug/: gumbo-parser.lib
libs/gumbo-parser/win32/VC14/x64/Release/: gumbo-parser.lib
libs/openssl/win32/VC14/x32/debug/: ssleay32.lib
libs/openssl/win32/VC14/x32/release/: ssleay32.lib
libs/openssl/win32/VC14/x64/debug/: ssleay32.lib
libs/openssl/win32/VC14/x64/release/: ssleay32.lib
qbs/imports/: QmlModule.qbs  QmlPlugin.qbs
qml_frontend/: CMakeLists.txt  forumreader.cpp  forumreader.h  main.cpp  main.qml  qml.qrc
qml_frontend/qml/: Post.qml  PostAnimatedImage.qml  PostHyperlink.qml  PostPlainText.qml  PostSpoiler.qml  User.qml
scripts/: build.sh  build_in_docker.sh  deployqt.py  take_screenshot.py
src/: deployment.pri  src.pro
src/android/: AndroidManifest.xml  build.gradle
src/android/gradle/wrapper/: gradle-wrapper.properties
src/android/res/values/: strings.xml
src/application/: CMakeLists.txt  application.pro  forumreader.cpp  forumreader.h  main.cpp  qml.qrc  task.cpp  task.h  translator.cpp  translator.h
src/application/android/: AndroidManifest.xml
src/application/qml/: Post.qml  PostAnimatedImage.qml  PostHyperlink.qml  PostImage.qml  PostLineBreak.qml  PostList.qml  PostPlainText.qml  PostQuote.qml  PostSpoiler.qml  User.qml  UserListDialog.qml  main.qml
src/application/qml/+android/: NavigationPanel.qml  PostList.qml  main.qml
src/application/qml/+ios/: main.qml  qtquickcontrols2.conf
src/application/qml/i18n/: base.ts  qml_en.ts  qml_ru.ts
src/cmake/: AndroidManifest.xml.in  FindWin32SslRuntime.cmake  NSIS.template.in  PreventInSourceBuilds.cmake
src/common/: export.h  filedownloader.cpp  filedownloader.h  forumthreadurl.cpp  forumthreadurl.h  logger.h  resultcode.h
src/network/: filedownloader.h
src/parser_frontend/: forumthreadpool.cpp  forumthreadpool.h
src/qbs/imports/: QtQmlApplication.qbs  qmlTools.js
src/qbs/modules/app_config/: app_config.qbs
src/qml_backend/: forumreader.cpp  forumreader.h  useravatarimageprovider.cpp  useravatarimageprovider.h
src/qml_frontend/: forumreader.cpp  forumreader.h  main.cpp  qml.qrc  task.cpp  task.h
src/qml_frontend/qml/: Post.qml  PostAnimatedImage.qml  PostHyperlink.qml  PostImage.qml  PostLineBreak.qml  PostList.qml  PostPlainText.qml  PostQuote.qml  PostRichText.qml  PostSpoiler.qml  PostVideo.qml  User.qml  UserListDialog.qml  main.qml
src/qml_frontend/qml/+android/: NavigationPanel.qml  PostList.qml  main.qml
src/qml_frontend/qml/+ios/: main.qml
src/tests/: gumboparserimpl_tests.cpp  main.cpp  tests.pro
src/website_backend/: gumboparserimpl.cpp  gumboparserimpl.h  html_tag.h  qtgumbodocument.cpp  qtgumbodocument.h  qtgumbonode.cpp  qtgumbonode.h  websiteinterface.cpp  websiteinterface.h  websiteinterface_fwd.h  websiteinterface_qt.cpp  websiteinterface_qt.h
tests/: gumboparserimpl_tests.cpp
website_backend/: CMakeLists.txt  gumboparserimpl.cpp  gumboparserimpl.h  html_tag.h  qtgumbodocument.cpp  qtgumbodocument.h  qtgumbonode.cpp  qtgumbonode.h  websiteinterface.cpp  websiteinterface.h  websiteinterface_fwd.h
